--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ scala_213: &scala_213
   SCALA_VERSION: 2.13.0
 
 scala_dotty: &scala_dotty
-  SCALA_VERSION: 0.19.1-bin-20190904-beba63a-NIGHTLY
+  SCALA_VERSION: 0.19.0-RC1
 
 jdk_8: &jdk_8
   JDK_VERSION: 8
