Add SBT onLoadMessage (#1925)
* Add SBT onLoadMessage

* Add microsite task to list

* Update compileJVM alias and add compileJVMDotty

* Run fmt

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,7 @@ compile: &compile
     - <<: *load_cache
     - run:
         name: Compile code
-        command: ./sbt -Dfatal.warnings=true ++${SCALA_VERSION}! compileJVM
+        command: ./sbt -Dfatal.warnings=true ++${SCALA_VERSION}! compileJVMDotty
     - <<: *clean_cache
     - <<: *save_cache
 
