--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,16 +93,6 @@ install_nodejs: &install_nodejs
         nvm use
         node -v
 
-compile: &compile
-  steps:
-    - checkout
-    - <<: *load_cache
-    - run:
-        name: Compile code
-        command: ./sbt -Dfatal.warnings=true ++${SCALA_VERSION}! compileJVMDotty
-    - <<: *clean_cache
-    - <<: *save_cache
-
 lint: &lint
   steps:
     - checkout
@@ -137,6 +127,16 @@ testJVM: &testJVM
     - <<: *save_cache
     - store_test_results:
         path: core-tests/jvm/target/test-reports
+
+testJVMDotty: &testJVMDotty
+  steps:
+    - checkout
+    - <<: *load_cache
+    - run:
+        name: Run tests
+        command: ./sbt -Dfatal.warnings=true ++${SCALA_VERSION}! testJVMDotty
+    - <<: *clean_cache
+    - <<: *save_cache
 
 testJS: &testJS
   steps:
@@ -208,13 +208,6 @@ jobs:
       - <<: *scala_212
       - <<: *jdk_8
 
-  compile_dotty:
-    <<: *compile
-    <<: *machine_ubuntu
-    environment:
-      - <<: *scala_dotty
-      - <<: *jdk_8
-
   mdoc:
     <<: *mdoc
     <<: *machine_ubuntu
@@ -247,7 +240,7 @@ jobs:
       - <<: *jdk_8
 
   test_dotty_jdk8_jvm:
-    <<: *testJVM
+    <<: *testJVMDotty
     <<: *machine_ubuntu
     <<: *machine_resource
     environment:
@@ -304,12 +297,6 @@ workflows:
           filters:
             tags:
               only: /^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$/
-      - compile_dotty:
-          requires:
-            - lint
-          filters:
-            tags:
-              only: /^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$/
       - mdoc:
           requires:
             - lint
@@ -334,12 +321,12 @@ workflows:
           filters:
             tags:
               only: /^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$/
-#      - test_dotty_jdk8_jvm:
-#          requires:
-#            - lint
-#          filters:
-#            tags:
-#              only: /^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$/
+      - test_dotty_jdk8_jvm:
+         requires:
+           - lint
+         filters:
+           tags:
+             only: /^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$/
       - test_212_jdk11_jvm:
           requires:
             - lint
