--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ scala_212: &scala_212
 scala_213: &scala_213
   SCALA_VERSION: 2.13.1
 
-scala_dotty: &scala_dotty
-  SCALA_VERSION: 0.21.0-RC1
+# scala_dotty: &scala_dotty
+#   SCALA_VERSION: 0.21.0-RC1
 
 jdk_8: &jdk_8
   JDK_VERSION: 8
@@ -283,13 +283,13 @@ jobs:
       - <<: *scala_213
       - <<: *jdk_8
 
-  test_dotty_jdk8_jvm:
-    <<: *testJVMDotty
-    <<: *machine_ubuntu
-    <<: *machine_resource
-    environment:
-      - <<: *scala_dotty
-      - <<: *jdk_8
+  # test_dotty_jdk8_jvm:
+  #   <<: *testJVMDotty
+  #   <<: *machine_ubuntu
+  #   <<: *machine_resource
+  #   environment:
+  #     - <<: *scala_dotty
+  #     - <<: *jdk_8
 
   test_212_jdk11_jvm:
     <<: *testJVM
@@ -378,12 +378,12 @@ workflows:
             - fix
           filters:
             <<: *filter_tags
-      - test_dotty_jdk8_jvm:
-          requires:
-            - lint
-            - fix
-          filters:
-            <<: *filter_tags
+      # - test_dotty_jdk8_jvm:
+      #     requires:
+      #       - lint
+      #       - fix
+      #     filters:
+      #       <<: *filter_tags
       - test_212_jdk11_jvm:
           requires:
             - lint
