--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,13 +218,13 @@ release: &release
           command: echo "credentials += Credentials(\"Sonatype Nexus Repository Manager\", \"oss.sonatype.org\", \"${SONATYPE_USER}\", \"${SONATYPE_PASSWORD}\")" > ~/.sbt/1.0/sonatype.sbt
       - run:
           name: Write PGP public key
-          command: echo -n "${PGP_PUBLIC}" | base64 -d > /tmp/public.asc
+          command: echo -n "${PGP_PUBLIC}" | base64 -di > /tmp/public.asc
       - run:
           name: Write PGP secret key
-          command: echo -n "${PGP_SECRET}" | base64 -d > /tmp/secret.asc
+          command: echo -n "${PGP_SECRET}" | base64 -di > /tmp/secret.asc
       - run:
           name: Release artifacts
-          command: ./sbt ++${SCALA_VERSION}! clean sonatypeBundleClean +publishSigned sonatypeBundleRelease
+          command: ./sbt ++${SCALA_VERSION}! clean ci-release
 
 microsite: &microsite
   steps:
@@ -409,7 +409,7 @@ workflows:
           filters:
             <<: *filter_tags
       - release:
-          context: Sonatype
+          context: Sonatype2
           requires:
             - test_211_jdk8_jvm
             - test_211_jdk8_js
@@ -422,7 +422,8 @@ workflows:
           filters:
             <<: *filter_tags
             branches:
-              ignore: /.*/
+              only:
+                - master
       - microsite:
           context: Website
           requires:
