Fixed issue relating to doing a signed release using PGP2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,7 +224,17 @@ release: &release
           command: echo -n "${PGP_SECRET}" | base64 -di > /tmp/secret.asc
       - run:
           name: Release artifacts
-          command: ./sbt ++${SCALA_VERSION}! clean ci-release
+          command: |
+            mkdir -p $HOME/bin
+            sudo apt-get update && sudo apt-get -y install gnupg2
+            echo pinentry-mode loopback >> ~/.gnupg/gpg.conf
+            echo allow-loopback-pinentry >> ~/.gnupg/gpg-agent.conf
+            chmod 600 ~/.gnupg/*
+            ln -s /usr/bin/gpg2 $HOME/bin/gpg
+            $HOME/bin/gpg --version
+            echo RELOADAGENT | gpg-connect-agent
+            echo $PGP_SECRET | base64 -di | gpg2 --import --no-tty --batch --yes
+            PATH=$HOME/bin:$PATH ./sbt ++${SCALA_VERSION}! clean ci-release
 
 microsite: &microsite
   steps:
