--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ scala_213: &scala_213
   SCALA_VERSION: 2.13.1
 
 scala_dotty: &scala_dotty
-  SCALA_VERSION: 0.22.0-bin-20200116-9ab1842-NIGHTLY
+  SCALA_VERSION: 0.22.0-RC1
 
 jdk_8: &jdk_8
   JDK_VERSION: 8
