--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -13,3 +13,8 @@ spaces {
 optIn.annotationNewlines = true
 
 rewrite.rules = [SortImports, RedundantBraces]
+
+project.excludeFilters = [
+  "core/shared/src/main/scala/zio/Has.scala",
+  "core/shared/src/main/scala/zio/ZLayer.scala"
+]
