--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -16,5 +16,7 @@ rewrite.rules = [SortImports, RedundantBraces]
 
 project.excludeFilters = [
   "core/shared/src/main/scala/zio/Has.scala",
-  "core/shared/src/main/scala/zio/ZLayer.scala"
+  "core/shared/src/main/scala/zio/ZLayer.scala",
+  "core/shared/src/main/scala-2.x/zio/Tagged.scala"
+  "core/shared/src/main/scala-2.x/zio/VersionSpecific.scala"
 ]
