ZIO Core: Derive Tags for Polymorphic Services (#3058)
* derive tags

* add arities

* fix typo

* simplify

* add back arities

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -16,5 +16,6 @@ rewrite.rules = [SortImports, RedundantBraces]
 
 project.excludeFilters = [
   "core/shared/src/main/scala/zio/Has.scala",
-  "core/shared/src/main/scala/zio/ZLayer.scala"
+  "core/shared/src/main/scala/zio/ZLayer.scala",
+  "core/shared/src/main/scala-2.x/zio/VersionSpecific.scala"
 ]
